--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
         "name": "axe-testing",
         "version": "0.1.0",
-        "private": true,
+        "description": "Simple tool for accessibiltiy testing a web site",
+        "main": "axe-test.js",
+        "scripts":{
+                "start": "node axe-test.js"
+        },
         "dependencies": {
                 "axe-core": "^2.3.0",
                 "axe-webdriverjs": "1.1.2",
-                "selenium-webdriver": ">= 3.4.0"
+                "selenium-webdriver": ">= 3.4.0",
+                "chromedriver": "^2.30.1"
         }
 }
