--- a/config.json.sample
+++ b/config.json.sample
@@ -2,5 +2,9 @@
   "user":"username",
   "password":"xxxxx",
   "server":"https://myserver.somewhere",
-  "page":"/the/page/to/test"
+  "pages": [
+    "",
+    "/first/page/to/test",
+    "/another/page/to/test"
+  ]
 }
